<resources>
    <string name="app_name">Widoki</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="go_back">Go Back</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="back_button">Back Button</string>
    <string name="about_me">About Me</string>
    <string name="abtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cucumbers">Ogórki</string>
    <string name="tomatoes">Pomidory</string>
    <string name="pepper">Papryka</string>
    <string name="bananas">Banany</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="selected_product">Selected Product</string>
    <string name="product">Product</string>
    <string name="buy">Buy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_button_text">Buy</string>
    <string name="product_name">Product_name_here</string>
    <string name="shops_localizations">Our Shops Localizations</string>
    <string name="google_text">Log in with Google</string>
    <string name="category">Category</string>
    <string name="shipping_information">Shipping information</string>
    <string name="order_name">Order Name</string>
    <string name="order_address">Order Address</string>
    <string name="phone_number">Phone Number</string>
</resources>