<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Products">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:contentDescription="@string/add_to_cart"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextProdPepper"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@mipmap/ic_addproduct"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:contentDescription="@string/add_to_cart"
        app:layout_constraintBottom_toTopOf="@+id/prodAboutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextProdBananas"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@mipmap/ic_addproduct"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:contentDescription="@string/add_to_cart"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextProdTomatoes"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@mipmap/ic_addproduct"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2094176" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <Button
        android:id="@+id/prodAboutButton"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:onClick="openAboutMePage"
        android:text="@string/about_me"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextProdCucumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/imageButton"
        android:minHeight="48dp"
        android:text="@string/cucumbers"
        app:layout_constraintBottom_toTopOf="@+id/editTextProdTomatoes"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextProdTomatoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/imageButton2"
        android:minHeight="48dp"
        android:text="@string/tomatoes"
        app:layout_constraintBottom_toTopOf="@+id/editTextProdPepper"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProdCucumbers" />

    <EditText
        android:id="@+id/editTextProdPepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/imageButton3"
        android:minHeight="48dp"
        android:text="@string/pepper"
        app:layout_constraintBottom_toTopOf="@+id/editTextProdBananas"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProdTomatoes" />

    <EditText
        android:id="@+id/editTextProdBananas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/imageButton4"
        android:minHeight="48dp"
        android:text="@string/bananas"
        app:layout_constraintBottom_toTopOf="@+id/prodAboutButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProdPepper" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:contentDescription="@string/add_to_cart"
        android:onClick="addProductToCart"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextProdCucumbers"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@mipmap/ic_addproduct"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>


